--- a/nextjs-app/backend/requirements.txt
+++ b/nextjs-app/backend/requirements.txt
@@ -12,3 +12,6 @@ feedparser==6.0.11
 beautifulsoup4==4.12.3
 requests==2.32.3
 vaderSentiment==3.3.2
+pytest==8.2.0
+pytest-cov==5.0.0
+pytest-asyncio==0.24.0
