--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,11 +97,12 @@ jobs:
           severity: HIGH,CRITICAL
 
       - name: Gitleaks
-        uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: detect --source=. --no-git --redact
+          GITLEAKS_VERSION: v8.18.2
+        run: |
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/download/${GITLEAKS_VERSION}/gitleaks_${GITLEAKS_VERSION#v}_linux_x64.tar.gz \
+            | tar -xz gitleaks
+          ./gitleaks detect --source=. --no-git --redact
 
   e2e:
     name: E2E Placeholder
