--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           python -m pytest -q --maxfail=1 --disable-warnings --cov=. --cov-report=xml --cov-fail-under=80
 
       - name: Upload coverage
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: backend-coverage
