--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,12 +81,10 @@ jobs:
           name: backend-coverage
           path: nextjs-app/backend/coverage.xml
 
-  security:
-    name: Security & Secrets Scan
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Trivy FS Scan
         uses: aquasecurity/trivy-action@master
